--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ nav {
     flex: 1 1 100%;
     height: 50px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0px 100px;
 }
 
 nav a {
@@ -40,15 +41,16 @@ nav a {
 
 nav ul{
     list-style-type: none;
-    /* gap: 16px */
+    gap: 22px;
 }
 
 .header-container {
     flex: 1 1 auto;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 32px;
     row-gap: 0px;
+    margin: 0px 70px;
 }
 
 .header-content {
