--- a/style.css
+++ b/style.css
@@ -90,7 +90,10 @@ a:hover {
 }
 
 header img {
+    margin-top: -20px;
+    border: 2px solid #EC745C;
     height: 250px;
+    border-radius: 10px;
 }
 
 .illustration-container {
@@ -140,7 +143,7 @@ header img {
 
 .quote {
     padding: 50px;
-    max-width: 80%;
+    max-width: 800px;
     margin: auto;
     font-style: italic;
     overflow: auto;
